# 7-term

./: .gitignore  aga ugu.xlsx  Лист_Задания_2025_По_самому_новому_стандарту.docx  Тезисы Точило.docx  Титульник_ПОИТ_2025_по_самому_новому_стандарту.docx
BRBIT/labs/: .~lock.ЛР2_Точило_ФИТ_4.xlsx#  2-Registratsija-kommercheskoj-organizatsii.xlsx  ЛР2_Точило_ФИТ_4.xlsx  Лабораторная_работа_5_Затраты_проект_с.ods  Точило ФИТ 4-4 Лабораторная_работа_5_Затраты_проект_с.ods
CIS/labs/: MS Free Labs.docx
DCS/labs/: .~lock.РИС_Лабораторная работа_04-06 РСОИ.doc#  .~lock.РИС_Лабораторная_работа_02.docx#  .~lock.РИС_Лабораторная_работа_04-06 РСОИ.doc#  РИС_Лабораторная_работа_01.docx
IPDAT/labs/: 10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  16.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  9.ipynb  requirements.txt
IPMB/: custom_dct.py  koch-zhao.ipynb  studfile_dct.py
ISD/labs/: .~lock.1.odt#  1.odt  idef0.drawio  idef3-1.drawio  idef3-2.drawio  idef3-3.drawio  idef3-4.drawio  (+1 more)
ISD/testPasser/: .env  answers.json  main.py  pyproject.toml  schemes.py  server.py
ISD/testPasser/templates/: index.html
MAD/: README.md
WSD/: .~lock.Ответы Лены.docx#  Ответы Лены.docx  Экзаменационные вопросы.docx
WSD/gRPC_demo/: GOD_SAVE_ME.md  client.Dockerfile  gRPC-demo-client.ipynb  go.mod  main.py  pyproject.toml  server.Dockerfile  server.go  service.proto  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  setup.sh  Руководство gRPC Golang+Python Точило.odt
_curse/: Zapiska.docx  diploma.tar  send.sh  unpack.sh  Отзыв Точило.odt
_notes/: Achievements.md  labs.md
(+512 files in other folders)
