[tool.poetry]
name = "testpasser"
version = "0.1.0"
description = ""
authors = ["XoJIoDuJIHuK <XoJIoDuJIHuK@yandex.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
pydantic = "^2.10.2"
google-cloud-aiplatform = ">=1.70.0,<1.71.0"
google-generativeai = "0.8.3"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
